<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_radius_12"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_micro_sensitivity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/what_is_sound_sensitivity"
            android:textColor="@color/color_212121"
            android:textSize="19dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/the_higher_the_sound_sensitivity"
            android:textColor="@color/color_212121"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/txt_note"
            android:textColor="@color/color_212121"
            android:textSize="19dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center|start"
            android:text="@string/sound_sensitivity_may_vary_across"
            android:textColor="@color/color_212121"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/color_005eff"
            android:textSize="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>