<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_radius_12"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/screen_alert_tutorial"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/descript_tutorial"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/iv_tutorial"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_tutorial" />

        <TextView
            android:id="@+id/iv_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_radius_100"
            android:backgroundTint="@color/color_005eff"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>