<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_12"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_28sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_delete_file" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#3C3C3C"
            android:text="@string/are_you_sure_you_want_to_delete" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_weight="2">


            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_8"
                android:backgroundTint="#F06A33"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="@dimen/_4sdp"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="@dimen/_12sdp" />
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_8"
                android:backgroundTint="#EBEBEB"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#605D5D"
                android:textFontWeight="700"
                android:textSize="@dimen/_12sdp" />




        </LinearLayout>

    </LinearLayout>

</RelativeLayout>