<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:text="@string/title_issue_uninstall"
        android:textColor="@color/color_212121"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@id/iv_title"
        app:layout_constraintStart_toStartOf="@id/iv_back"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_issue_uninstall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <LinearLayout
        android:id="@+id/ll_state1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/iv_title">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feature_does_not_work"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_state1"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_state2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_state1">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/too_many_ads"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_state2"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_state3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_state2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/i_do_not_need_it_anymore"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_state3"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16sdp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/ll_state3">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_cancel"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/cancel"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tv_uninstall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_round_uninstall"
            android:backgroundTint="@color/color_005eff"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="Uninstall"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fr_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>